--- a/documentation/dependencies.html
+++ b/documentation/dependencies.html
@@ -86,9 +86,13 @@
         <li>
             <b>bootstrap</b> : ^4.5.0</li>
         <li>
+            <b>chart.js</b> : ^2.9.3</li>
+        <li>
             <b>cytoscape</b> : ^3.15.1</li>
         <li>
             <b>jquery</b> : ^3.5.1</li>
+        <li>
+            <b>ng2-charts</b> : ^2.3.2</li>
         <li>
             <b>popper.js</b> : ^1.16.1</li>
         <li>
