--- a/documentation/interfaces/NeContinuousChart.html
+++ b/documentation/interfaces/NeContinuousChart.html
@@ -43,7 +43,7 @@
 
 <ol class="breadcrumb">
   <li>Interfaces</li>
-  <li>NeStyle</li>
+  <li>NeContinuousChart</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -61,7 +61,7 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>src/app/models/ne-style.ts</code>
+            <code>src/app/models/ne-continuous-chart.ts</code>
         </p>
 
 
@@ -79,15 +79,16 @@
                         <td class="col-md-4">
                             <ul class="index-list">
                                 <li>
-                                            <span class="modifier">Optional</span>
-                                        <a href="#appliedTo">appliedTo</a>
+                                        <a href="#lineChartColors">lineChartColors</a>
                                 </li>
                                 <li>
-                                        <a href="#selector">selector</a>
+                                        <a href="#lineChartData">lineChartData</a>
                                 </li>
                                 <li>
-                                            <span class="modifier">Optional</span>
-                                        <a href="#style">style</a>
+                                        <a href="#lineChartLabels">lineChartLabels</a>
+                                </li>
+                                <li>
+                                        <a href="#lineChartOptions">lineChartOptions</a>
                                 </li>
                             </ul>
                         </td>
@@ -104,13 +105,13 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="appliedTo"></a>
-                                        <span class="name"><b>appliedTo</b><a href="#appliedTo"><span class="icon ion-ios-link"></span></a></span>
+                                        <a name="lineChartColors"></a>
+                                        <span class="name"><b>lineChartColors</b><a href="#lineChartColors"><span class="icon ion-ios-link"></span></a></span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>appliedTo:         <code><a href="../interfaces/NeElement.html" target="_self" >NeElement[]</a></code>
+                                        <code>lineChartColors:     <code>Color[]</code>
 </code>
                                     </td>
                                 </tr>
@@ -118,41 +119,7 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="../interfaces/NeElement.html" target="_self" >NeElement[]</a></code>
-
-                                        </td>
-                                    </tr>
-
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Optional</i>
-                                        </td>
-                                    </tr>
-
-
-
-
-                        </tbody>
-                    </table>
-                    <table class="table table-sm table-bordered">
-                        <tbody>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <a name="selector"></a>
-                                        <span class="name"><b>selector</b><a href="#selector"><span class="icon ion-ios-link"></span></a></span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <code>selector:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-</code>
-                                    </td>
-                                </tr>
-
-
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                            <i>Type : </i>    <code>Color[]</code>
 
                                         </td>
                                     </tr>
@@ -167,13 +134,71 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="style"></a>
-                                        <span class="name"><b>style</b><a href="#style"><span class="icon ion-ios-link"></span></a></span>
+                                        <a name="lineChartData"></a>
+                                        <span class="name"><b>lineChartData</b><a href="#lineChartData"><span class="icon ion-ios-link"></span></a></span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>style:         <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                                        <code>lineChartData:     <code>ChartDataSets[]</code>
+</code>
+                                    </td>
+                                </tr>
+
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Type : </i>    <code>ChartDataSets[]</code>
+
+                                        </td>
+                                    </tr>
+
+
+
+
+
+                        </tbody>
+                    </table>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <a name="lineChartLabels"></a>
+                                        <span class="name"><b>lineChartLabels</b><a href="#lineChartLabels"><span class="icon ion-ios-link"></span></a></span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>lineChartLabels:     <code>Label[]</code>
+</code>
+                                    </td>
+                                </tr>
+
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Type : </i>    <code>Label[]</code>
+
+                                        </td>
+                                    </tr>
+
+
+
+
+
+                        </tbody>
+                    </table>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <a name="lineChartOptions"></a>
+                                        <span class="name"><b>lineChartOptions</b><a href="#lineChartOptions"><span class="icon ion-ios-link"></span></a></span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>lineChartOptions:         <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -186,11 +211,6 @@
                                         </td>
                                     </tr>
 
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Optional</i>
-                                        </td>
-                                    </tr>
 
 
 
@@ -202,12 +222,14 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {NeElement} from &#x27;./ne-element&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {ChartDataSets} from &#x27;chart.js&#x27;;
+import {Color, Label} from &#x27;ng2-charts&#x27;;
 
-export interface NeStyle {
-  selector: string;
-  style?: any;
-  appliedTo?: NeElement[];
+export interface NeContinuousChart {
+  lineChartData: ChartDataSets[];
+  lineChartLabels: Label[];
+  lineChartColors: Color[];
+  lineChartOptions: any;
 }
 </code></pre>
     </div>
@@ -236,7 +258,7 @@ export interface NeStyle {
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'interface';
-            var COMPODOC_CURRENT_PAGE_URL = 'NeStyle.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'NeContinuousChart.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
