--- a/documentation/interfaces/NeContinuousCollection.html
+++ b/documentation/interfaces/NeContinuousCollection.html
@@ -43,7 +43,7 @@
 
 <ol class="breadcrumb">
   <li>Interfaces</li>
-  <li>NeEdge</li>
+  <li>NeContinuousCollection</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -61,16 +61,10 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>src/app/models/ne-edge.ts</code>
+            <code>src/app/models/ne-continuous-collection.ts</code>
         </p>
 
 
-            <p class="comment">
-                <h3>Extends</h3>
-            </p>
-            <p class="comment">
-                        <code><a href="../interfaces/NeElement.html" target="_self" >NeElement</a></code>
-            </p>
 
         <section>
             <h3 id="index">Index</h3>
@@ -85,27 +79,29 @@
                         <td class="col-md-4">
                             <ul class="index-list">
                                 <li>
-                                            <span class="modifier">Optional</span>
-                                        <a href="#attributes">attributes</a>
+                                        <a href="#chart">chart</a>
                                 </li>
                                 <li>
                                             <span class="modifier">Optional</span>
-                                        <a href="#classes">classes</a>
+                                        <a href="#chartValid">chartValid</a>
                                 </li>
                                 <li>
-                                        <a href="#group">group</a>
+                                            <span class="modifier">Optional</span>
+                                        <a href="#colorGradient">colorGradient</a>
                                 </li>
                                 <li>
-                                        <a href="#id">id</a>
+                                        <a href="#displayChart">displayChart</a>
                                 </li>
                                 <li>
-                                        <a href="#name">name</a>
+                                            <span class="modifier">Optional</span>
+                                        <a href="#gradientValid">gradientValid</a>
                                 </li>
                                 <li>
-                                        <a href="#source">source</a>
+                                            <span class="modifier">Optional</span>
+                                        <a href="#title">title</a>
                                 </li>
                                 <li>
-                                        <a href="#target">target</a>
+                                        <a href="#values">values</a>
                                 </li>
                             </ul>
                         </td>
@@ -122,13 +118,13 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="attributes"></a>
-                                        <span class="name"><b>attributes</b><a href="#attributes"><span class="icon ion-ios-link"></span></a></span>
+                                        <a name="chart"></a>
+                                        <span class="name"><b>chart</b><a href="#chart"><span class="icon ion-ios-link"></span></a></span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>attributes:     <code>NeElementAttribute[]</code>
+                                        <code>chart:         <code><a href="../interfaces/NeContinuousChart.html" target="_self" >NeContinuousChart</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -136,7 +132,36 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>    <code>NeElementAttribute[]</code>
+                                            <i>Type : </i>        <code><a href="../interfaces/NeContinuousChart.html" target="_self" >NeContinuousChart</a></code>
+
+                                        </td>
+                                    </tr>
+
+
+
+
+
+                        </tbody>
+                    </table>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <a name="chartValid"></a>
+                                        <span class="name"><b>chartValid</b><a href="#chartValid"><span class="icon ion-ios-link"></span></a></span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>chartValid:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+</code>
+                                    </td>
+                                </tr>
+
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
 
                                         </td>
                                     </tr>
@@ -156,13 +181,110 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="classes"></a>
-                                        <span class="name"><b>classes</b><a href="#classes"><span class="icon ion-ios-link"></span></a></span>
+                                        <a name="colorGradient"></a>
+                                        <span class="name"><b>colorGradient</b><a href="#colorGradient"><span class="icon ion-ios-link"></span></a></span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>classes:     <code>string[]</code>
+                                        <code>colorGradient:         <code><a href="../interfaces/NeColorGradient.html" target="_self" >NeColorGradient[]</a></code>
+</code>
+                                    </td>
+                                </tr>
+
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Type : </i>        <code><a href="../interfaces/NeColorGradient.html" target="_self" >NeColorGradient[]</a></code>
+
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Optional</i>
+                                        </td>
+                                    </tr>
+
+
+
+
+                        </tbody>
+                    </table>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <a name="displayChart"></a>
+                                        <span class="name"><b>displayChart</b><a href="#displayChart"><span class="icon ion-ios-link"></span></a></span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>displayChart:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+</code>
+                                    </td>
+                                </tr>
+
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+
+                                        </td>
+                                    </tr>
+
+
+
+
+
+                        </tbody>
+                    </table>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <a name="gradientValid"></a>
+                                        <span class="name"><b>gradientValid</b><a href="#gradientValid"><span class="icon ion-ios-link"></span></a></span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>gradientValid:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+</code>
+                                    </td>
+                                </tr>
+
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Optional</i>
+                                        </td>
+                                    </tr>
+
+
+
+
+                        </tbody>
+                    </table>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <a name="title"></a>
+                                        <span class="name"><b>title</b><a href="#title"><span class="icon ion-ios-link"></span></a></span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>title:     <code>string[]</code>
 </code>
                                     </td>
                                 </tr>
@@ -190,13 +312,13 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="group"></a>
-                                        <span class="name"><b>group</b><a href="#group"><span class="icon ion-ios-link"></span></a></span>
+                                        <a name="values"></a>
+                                        <span class="name"><b>values</b><a href="#values"><span class="icon ion-ios-link"></span></a></span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>group:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                        <code>values:     <code>NeStyleComponent[]</code>
 </code>
                                     </td>
                                 </tr>
@@ -204,123 +326,7 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-
-                                        </td>
-                                    </tr>
-
-
-
-
-
-                        </tbody>
-                    </table>
-                    <table class="table table-sm table-bordered">
-                        <tbody>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <a name="id"></a>
-                                        <span class="name"><b>id</b><a href="#id"><span class="icon ion-ios-link"></span></a></span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <code>id:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-</code>
-                                    </td>
-                                </tr>
-
-
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-
-                                        </td>
-                                    </tr>
-
-
-
-
-
-                        </tbody>
-                    </table>
-                    <table class="table table-sm table-bordered">
-                        <tbody>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <a name="name"></a>
-                                        <span class="name"><b>name</b><a href="#name"><span class="icon ion-ios-link"></span></a></span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <code>name:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-</code>
-                                    </td>
-                                </tr>
-
-
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-
-                                        </td>
-                                    </tr>
-
-
-
-
-
-                        </tbody>
-                    </table>
-                    <table class="table table-sm table-bordered">
-                        <tbody>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <a name="source"></a>
-                                        <span class="name"><b>source</b><a href="#source"><span class="icon ion-ios-link"></span></a></span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <code>source:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-</code>
-                                    </td>
-                                </tr>
-
-
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-
-                                        </td>
-                                    </tr>
-
-
-
-
-
-                        </tbody>
-                    </table>
-                    <table class="table table-sm table-bordered">
-                        <tbody>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <a name="target"></a>
-                                        <span class="name"><b>target</b><a href="#target"><span class="icon ion-ios-link"></span></a></span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <code>target:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-</code>
-                                    </td>
-                                </tr>
-
-
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                            <i>Type : </i>    <code>NeStyleComponent[]</code>
 
                                         </td>
                                     </tr>
@@ -336,18 +342,18 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {NeElement} from &#x27;./ne-element&#x27;;
-import {NeNode} from &#x27;./ne-node&#x27;;
-import {NeElementAttribute} from &#x27;./ne-element-attribute&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {NeContinuousChart} from &#x27;./ne-continuous-chart&#x27;;
+import {NeStyleComponent} from &#x27;./ne-style-component&#x27;;
+import {NeColorGradient} from &#x27;./ne-color-gradient&#x27;;
 
-export interface NeEdge extends NeElement {
-  id: string;
-  group: string;
-  name: string;
-  source: string;
-  target: string;
-  attributes?: NeElementAttribute[];
-  classes?: string[];
+export interface NeContinuousCollection {
+  chart: NeContinuousChart;
+  values: NeStyleComponent[];
+  displayChart: boolean;
+  colorGradient?: NeColorGradient[];
+  chartValid?: boolean;
+  gradientValid?: boolean;
+  title?: string[];
 }
 </code></pre>
     </div>
@@ -376,7 +382,7 @@ export interface NeEdge extends NeElement {
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'interface';
-            var COMPODOC_CURRENT_PAGE_URL = 'NeEdge.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'NeContinuousCollection.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
