--- a/documentation/interfaces/NeGlobalMappings.html
+++ b/documentation/interfaces/NeGlobalMappings.html
@@ -107,7 +107,7 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>continuous:     <code>NeStyleComponent[]</code>
+                                        <code>continuous:         <code><a href="../interfaces/NeContinuousCollection.html" target="_self" >NeContinuousCollection[]</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -115,7 +115,7 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>    <code>NeStyleComponent[]</code>
+                                            <i>Type : </i>        <code><a href="../interfaces/NeContinuousCollection.html" target="_self" >NeContinuousCollection[]</a></code>
 
                                         </td>
                                     </tr>
@@ -172,10 +172,12 @@
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {NeMappingsDefinition} from &#x27;./ne-mappings-definition&#x27;;
 import {NeStyleComponent} from &#x27;./ne-style-component&#x27;;
+import {NeContinuousChart} from &#x27;./ne-continuous-chart&#x27;;
+import {NeContinuousCollection} from &#x27;./ne-continuous-collection&#x27;;
 
 export interface NeGlobalMappings {
   discrete?: NeMappingsDefinition[];
-  continuous?: NeStyleComponent[];
+  continuous?: NeContinuousCollection[];
 }
 </code></pre>
     </div>
