--- a/documentation/interfaces/NeGroupedMappingsDiscrete.html
+++ b/documentation/interfaces/NeGroupedMappingsDiscrete.html
@@ -43,7 +43,7 @@
 
 <ol class="breadcrumb">
   <li>Interfaces</li>
-  <li>NeEdge</li>
+  <li>NeGroupedMappingsDiscrete</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -61,16 +61,10 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>src/app/models/ne-edge.ts</code>
+            <code>src/app/models/ne-grouped-mappings-discrete.ts</code>
         </p>
 
 
-            <p class="comment">
-                <h3>Extends</h3>
-            </p>
-            <p class="comment">
-                        <code><a href="../interfaces/NeElement.html" target="_self" >NeElement</a></code>
-            </p>
 
         <section>
             <h3 id="index">Index</h3>
@@ -85,27 +79,19 @@
                         <td class="col-md-4">
                             <ul class="index-list">
                                 <li>
-                                            <span class="modifier">Optional</span>
-                                        <a href="#attributes">attributes</a>
+                                        <a href="#classifier">classifier</a>
                                 </li>
                                 <li>
-                                            <span class="modifier">Optional</span>
-                                        <a href="#classes">classes</a>
+                                        <a href="#selectors">selectors</a>
                                 </li>
                                 <li>
-                                        <a href="#group">group</a>
+                                        <a href="#styleMap">styleMap</a>
                                 </li>
                                 <li>
-                                        <a href="#id">id</a>
+                                        <a href="#th">th</a>
                                 </li>
                                 <li>
-                                        <a href="#name">name</a>
-                                </li>
-                                <li>
-                                        <a href="#source">source</a>
-                                </li>
-                                <li>
-                                        <a href="#target">target</a>
+                                        <a href="#values">values</a>
                                 </li>
                             </ul>
                         </td>
@@ -122,13 +108,13 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="attributes"></a>
-                                        <span class="name"><b>attributes</b><a href="#attributes"><span class="icon ion-ios-link"></span></a></span>
+                                        <a name="classifier"></a>
+                                        <span class="name"><b>classifier</b><a href="#classifier"><span class="icon ion-ios-link"></span></a></span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>attributes:     <code>NeElementAttribute[]</code>
+                                        <code>classifier:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -136,16 +122,11 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>    <code>NeElementAttribute[]</code>
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
 
                                         </td>
                                     </tr>
 
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Optional</i>
-                                        </td>
-                                    </tr>
 
 
 
@@ -156,13 +137,13 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="classes"></a>
-                                        <span class="name"><b>classes</b><a href="#classes"><span class="icon ion-ios-link"></span></a></span>
+                                        <a name="selectors"></a>
+                                        <span class="name"><b>selectors</b><a href="#selectors"><span class="icon ion-ios-link"></span></a></span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>classes:     <code>string[]</code>
+                                        <code>selectors:     <code>string[]</code>
 </code>
                                     </td>
                                 </tr>
@@ -175,11 +156,6 @@
                                         </td>
                                     </tr>
 
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Optional</i>
-                                        </td>
-                                    </tr>
 
 
 
@@ -190,13 +166,13 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="group"></a>
-                                        <span class="name"><b>group</b><a href="#group"><span class="icon ion-ios-link"></span></a></span>
+                                        <a name="styleMap"></a>
+                                        <span class="name"><b>styleMap</b><a href="#styleMap"><span class="icon ion-ios-link"></span></a></span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>group:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                        <code>styleMap:     <code>NeStyleMap[]</code>
 </code>
                                     </td>
                                 </tr>
@@ -204,36 +180,7 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-
-                                        </td>
-                                    </tr>
-
-
-
-
-
-                        </tbody>
-                    </table>
-                    <table class="table table-sm table-bordered">
-                        <tbody>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <a name="id"></a>
-                                        <span class="name"><b>id</b><a href="#id"><span class="icon ion-ios-link"></span></a></span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <code>id:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-</code>
-                                    </td>
-                                </tr>
-
-
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                            <i>Type : </i>    <code>NeStyleMap[]</code>
 
                                         </td>
                                     </tr>
@@ -248,13 +195,13 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="name"></a>
-                                        <span class="name"><b>name</b><a href="#name"><span class="icon ion-ios-link"></span></a></span>
+                                        <a name="th"></a>
+                                        <span class="name"><b>th</b><a href="#th"><span class="icon ion-ios-link"></span></a></span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>name:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                        <code>th:     <code>string[]</code>
 </code>
                                     </td>
                                 </tr>
@@ -262,7 +209,7 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                            <i>Type : </i>    <code>string[]</code>
 
                                         </td>
                                     </tr>
@@ -277,13 +224,13 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="source"></a>
-                                        <span class="name"><b>source</b><a href="#source"><span class="icon ion-ios-link"></span></a></span>
+                                        <a name="values"></a>
+                                        <span class="name"><b>values</b><a href="#values"><span class="icon ion-ios-link"></span></a></span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>source:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                        <code>values:     <code>string[]</code>
 </code>
                                     </td>
                                 </tr>
@@ -291,36 +238,7 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-
-                                        </td>
-                                    </tr>
-
-
-
-
-
-                        </tbody>
-                    </table>
-                    <table class="table table-sm table-bordered">
-                        <tbody>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <a name="target"></a>
-                                        <span class="name"><b>target</b><a href="#target"><span class="icon ion-ios-link"></span></a></span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <code>target:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-</code>
-                                    </td>
-                                </tr>
-
-
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                            <i>Type : </i>    <code>string[]</code>
 
                                         </td>
                                     </tr>
@@ -336,18 +254,15 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {NeElement} from &#x27;./ne-element&#x27;;
-import {NeNode} from &#x27;./ne-node&#x27;;
-import {NeElementAttribute} from &#x27;./ne-element-attribute&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {NeStyleComponent} from &#x27;./ne-style-component&#x27;;
+import {NeStyleMap} from &#x27;./ne-style-map&#x27;;
 
-export interface NeEdge extends NeElement {
-  id: string;
-  group: string;
-  name: string;
-  source: string;
-  target: string;
-  attributes?: NeElementAttribute[];
-  classes?: string[];
+export interface NeGroupedMappingsDiscrete {
+  classifier: string;
+  values: string[];
+  styleMap: NeStyleMap[];
+  th: string[];
+  selectors: string[];
 }
 </code></pre>
     </div>
@@ -376,7 +291,7 @@ export interface NeEdge extends NeElement {
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'interface';
-            var COMPODOC_CURRENT_PAGE_URL = 'NeEdge.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'NeGroupedMappingsDiscrete.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
