--- a/documentation/interfaces/NeSelection.html
+++ b/documentation/interfaces/NeSelection.html
@@ -43,7 +43,7 @@
 
 <ol class="breadcrumb">
   <li>Interfaces</li>
-  <li>NeStyle</li>
+  <li>NeSelection</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -61,7 +61,7 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>src/app/models/ne-style.ts</code>
+            <code>src/app/models/ne-selection.ts</code>
         </p>
 
 
@@ -79,15 +79,10 @@
                         <td class="col-md-4">
                             <ul class="index-list">
                                 <li>
-                                            <span class="modifier">Optional</span>
-                                        <a href="#appliedTo">appliedTo</a>
+                                        <a href="#edges">edges</a>
                                 </li>
                                 <li>
-                                        <a href="#selector">selector</a>
-                                </li>
-                                <li>
-                                            <span class="modifier">Optional</span>
-                                        <a href="#style">style</a>
+                                        <a href="#nodes">nodes</a>
                                 </li>
                             </ul>
                         </td>
@@ -104,13 +99,13 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="appliedTo"></a>
-                                        <span class="name"><b>appliedTo</b><a href="#appliedTo"><span class="icon ion-ios-link"></span></a></span>
+                                        <a name="edges"></a>
+                                        <span class="name"><b>edges</b><a href="#edges"><span class="icon ion-ios-link"></span></a></span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>appliedTo:         <code><a href="../interfaces/NeElement.html" target="_self" >NeElement[]</a></code>
+                                        <code>edges:         <code><a href="../interfaces/NeEdge.html" target="_self" >NeEdge[]</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -118,41 +113,7 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="../interfaces/NeElement.html" target="_self" >NeElement[]</a></code>
-
-                                        </td>
-                                    </tr>
-
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Optional</i>
-                                        </td>
-                                    </tr>
-
-
-
-
-                        </tbody>
-                    </table>
-                    <table class="table table-sm table-bordered">
-                        <tbody>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <a name="selector"></a>
-                                        <span class="name"><b>selector</b><a href="#selector"><span class="icon ion-ios-link"></span></a></span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <code>selector:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-</code>
-                                    </td>
-                                </tr>
-
-
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                            <i>Type : </i>        <code><a href="../interfaces/NeEdge.html" target="_self" >NeEdge[]</a></code>
 
                                         </td>
                                     </tr>
@@ -167,13 +128,13 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="style"></a>
-                                        <span class="name"><b>style</b><a href="#style"><span class="icon ion-ios-link"></span></a></span>
+                                        <a name="nodes"></a>
+                                        <span class="name"><b>nodes</b><a href="#nodes"><span class="icon ion-ios-link"></span></a></span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>style:         <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                                        <code>nodes:         <code><a href="../interfaces/NeNode.html" target="_self" >NeNode[]</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -181,16 +142,11 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                                            <i>Type : </i>        <code><a href="../interfaces/NeNode.html" target="_self" >NeNode[]</a></code>
 
                                         </td>
                                     </tr>
 
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Optional</i>
-                                        </td>
-                                    </tr>
 
 
 
@@ -202,12 +158,12 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {NeElement} from &#x27;./ne-element&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {NeEdge} from &#x27;./ne-edge&#x27;;
+import {NeNode} from &#x27;./ne-node&#x27;;
 
-export interface NeStyle {
-  selector: string;
-  style?: any;
-  appliedTo?: NeElement[];
+export interface NeSelection {
+  nodes: NeNode[];
+  edges: NeEdge[];
 }
 </code></pre>
     </div>
@@ -236,7 +192,7 @@ export interface NeStyle {
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'interface';
-            var COMPODOC_CURRENT_PAGE_URL = 'NeStyle.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'NeSelection.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
