--- a/documentation/interfaces/NeStyleComponent.html
+++ b/documentation/interfaces/NeStyleComponent.html
@@ -87,6 +87,9 @@
                                         <a href="#cssValue">cssValue</a>
                                 </li>
                                 <li>
+                                        <a href="#priority">priority</a>
+                                </li>
+                                <li>
                                         <a href="#selector">selector</a>
                                 </li>
                             </ul>
@@ -172,6 +175,35 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
+                                        <a name="priority"></a>
+                                        <span class="name"><b>priority</b><a href="#priority"><span class="icon ion-ios-link"></span></a></span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>priority:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
+</code>
+                                    </td>
+                                </tr>
+
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
+
+                                        </td>
+                                    </tr>
+
+
+
+
+
+                        </tbody>
+                    </table>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
                                         <a name="selector"></a>
                                         <span class="name"><b>selector</b><a href="#selector"><span class="icon ion-ios-link"></span></a></span>
                                     </td>
@@ -206,6 +238,7 @@
   selector: string;
   cssKey?: string;
   cssValue?: string;
+  priority: number;
 }
 </code></pre>
     </div>
