--- a/documentation/interfaces/NeStyleMap.html
+++ b/documentation/interfaces/NeStyleMap.html
@@ -43,7 +43,7 @@
 
 <ol class="breadcrumb">
   <li>Interfaces</li>
-  <li>NeStyle</li>
+  <li>NeStyleMap</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -61,7 +61,7 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>src/app/models/ne-style.ts</code>
+            <code>src/app/models/ne-style-map.ts</code>
         </p>
 
 
@@ -79,15 +79,13 @@
                         <td class="col-md-4">
                             <ul class="index-list">
                                 <li>
-                                            <span class="modifier">Optional</span>
-                                        <a href="#appliedTo">appliedTo</a>
+                                        <a href="#cssKey">cssKey</a>
                                 </li>
                                 <li>
-                                        <a href="#selector">selector</a>
+                                        <a href="#cssValues">cssValues</a>
                                 </li>
                                 <li>
-                                            <span class="modifier">Optional</span>
-                                        <a href="#style">style</a>
+                                        <a href="#selectors">selectors</a>
                                 </li>
                             </ul>
                         </td>
@@ -104,47 +102,13 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="appliedTo"></a>
-                                        <span class="name"><b>appliedTo</b><a href="#appliedTo"><span class="icon ion-ios-link"></span></a></span>
+                                        <a name="cssKey"></a>
+                                        <span class="name"><b>cssKey</b><a href="#cssKey"><span class="icon ion-ios-link"></span></a></span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>appliedTo:         <code><a href="../interfaces/NeElement.html" target="_self" >NeElement[]</a></code>
-</code>
-                                    </td>
-                                </tr>
-
-
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="../interfaces/NeElement.html" target="_self" >NeElement[]</a></code>
-
-                                        </td>
-                                    </tr>
-
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Optional</i>
-                                        </td>
-                                    </tr>
-
-
-
-
-                        </tbody>
-                    </table>
-                    <table class="table table-sm table-bordered">
-                        <tbody>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <a name="selector"></a>
-                                        <span class="name"><b>selector</b><a href="#selector"><span class="icon ion-ios-link"></span></a></span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <code>selector:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                        <code>cssKey:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -167,13 +131,13 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="style"></a>
-                                        <span class="name"><b>style</b><a href="#style"><span class="icon ion-ios-link"></span></a></span>
+                                        <a name="cssValues"></a>
+                                        <span class="name"><b>cssValues</b><a href="#cssValues"><span class="icon ion-ios-link"></span></a></span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>style:         <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                                        <code>cssValues:     <code>string[]</code>
 </code>
                                     </td>
                                 </tr>
@@ -181,16 +145,40 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                                            <i>Type : </i>    <code>string[]</code>
 
                                         </td>
                                     </tr>
+
+
+
+
+
+                        </tbody>
+                    </table>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <a name="selectors"></a>
+                                        <span class="name"><b>selectors</b><a href="#selectors"><span class="icon ion-ios-link"></span></a></span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>selectors:     <code>string[]</code>
+</code>
+                                    </td>
+                                </tr>
+
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Optional</i>
+                                            <i>Type : </i>    <code>string[]</code>
+
                                         </td>
                                     </tr>
+
 
 
 
@@ -202,12 +190,10 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {NeElement} from &#x27;./ne-element&#x27;;
-
-export interface NeStyle {
-  selector: string;
-  style?: any;
-  appliedTo?: NeElement[];
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">export interface NeStyleMap {
+  cssKey: string;
+  cssValues: string[];
+  selectors: string[];
 }
 </code></pre>
     </div>
@@ -236,7 +222,7 @@ export interface NeStyle {
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'interface';
-            var COMPODOC_CURRENT_PAGE_URL = 'NeStyle.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'NeStyleMap.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
