--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -76,16 +76,16 @@
                 <span class="coverage-count">(0/3)</span>
             </td>
         </tr>
-        <tr class="medium">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/AppComponent.html">src/app/app.component.ts</a>
             </td>
             <td>component</td>
             <td>AppComponent</td>
-            <td align="right" data-sort="43">
-                <span class="coverage-percent">43 %</span>
-                <span class="coverage-count">(7/16)</span>
+            <td align="right" data-sort="93">
+                <span class="coverage-percent">93 %</span>
+                <span class="coverage-count">(15/16)</span>
             </td>
         </tr>
         <tr class="low">
@@ -292,40 +292,40 @@
                 <span class="coverage-count">(0/25)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./interfaces/NeEdge.html">src/app/models/ne-edge.ts</a>
             </td>
             <td>interface</td>
             <td>NeEdge</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/8)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(8/8)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./interfaces/NeElementAttribute.html">src/app/models/ne-element-attribute.ts</a>
             </td>
             <td>interface</td>
             <td>NeElementAttribute</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/7)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(7/7)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./interfaces/NeElement.html">src/app/models/ne-element.ts</a>
             </td>
             <td>interface</td>
             <td>NeElement</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/7)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(7/7)</span>
             </td>
         </tr>
         <tr class="low">
@@ -424,28 +424,28 @@
                 <span class="coverage-count">(0/14)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./interfaces/NeNode.html">src/app/models/ne-node.ts</a>
             </td>
             <td>interface</td>
             <td>NeNode</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/8)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(8/8)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./interfaces/NePosition.html">src/app/models/ne-position.ts</a>
             </td>
             <td>interface</td>
             <td>NePosition</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/4)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(4/4)</span>
             </td>
         </tr>
         <tr class="low">
