--- a/documentation/interfaces/NeEdge.html
+++ b/documentation/interfaces/NeEdge.html
@@ -64,6 +64,13 @@
             <code>src/app/models/ne-edge.ts</code>
         </p>
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Type based on <a href="../interfaces/NeElement.html">NeElement</a> describing edges</p>
+
+            </p>
 
             <p class="comment">
                 <h3>Extends</h3>
@@ -150,6 +157,12 @@
 
 
 
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-description"><p>{@inheritdoc}</p>
+</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                     <table class="table table-sm table-bordered">
@@ -184,6 +197,12 @@
 
 
 
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-description"><p>{@inheritdoc}</p>
+</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                     <table class="table table-sm table-bordered">
@@ -213,6 +232,12 @@
 
 
 
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-description"><p>{@inheritdoc}</p>
+</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                     <table class="table table-sm table-bordered">
@@ -242,6 +267,12 @@
 
 
 
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-description"><p>{@inheritdoc}</p>
+</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                     <table class="table table-sm table-bordered">
@@ -271,6 +302,12 @@
 
 
 
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-description"><p>{@inheritdoc}</p>
+</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                     <table class="table table-sm table-bordered">
@@ -300,6 +337,12 @@
 
 
 
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-description"><p>id of the edge&#39;s source node, needs to refer to a <a href="NeNode#id">NeNode&#39;s id</a></p>
+</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                     <table class="table table-sm table-bordered">
@@ -329,6 +372,12 @@
 
 
 
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-description"><p>if of the edge&#39;s target node, needs to refer to a <a href="NeNode#id">NeNode&#39;s id</a></p>
+</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
             </section>
@@ -337,16 +386,46 @@
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {NeElement} from &#x27;./ne-element&#x27;;
-import {NeNode} from &#x27;./ne-node&#x27;;
 import {NeElementAttribute} from &#x27;./ne-element-attribute&#x27;;
 
+/**
+ * Type based on {@link NeElement} describing edges
+ */
 export interface NeEdge extends NeElement {
+
+  /**
+   * {@inheritdoc}
+   */
   id: string;
+
+  /**
+   * {@inheritdoc}
+   */
   group: string;
+
+  /**
+   * {@inheritdoc}
+   */
   name: string;
+
+  /**
+   * id of the edge&#x27;s source node, needs to refer to a {@link NeNode#id|NeNode&#x27;s id}
+   */
   source: string;
+
+  /**
+   * if of the edge&#x27;s target node, needs to refer to a {@link NeNode#id|NeNode&#x27;s id}
+   */
   target: string;
+
+  /**
+   * {@inheritdoc}
+   */
   attributes?: NeElementAttribute[];
+
+  /**
+   * {@inheritdoc}
+   */
   classes?: string[];
 }
 </code></pre>
